2006-05-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-properties-view.c:
	(totem_properties_view_set_location):
	Stop lingering timeouts before resetting the view (Closes: #341626)

============ Version 1.5.1

2006-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 1.5.1

2006-05-16  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_write_m3u),
	(totem_pl_parser_write_xspf), (totem_pl_parser_write_with_title),
	(totem_pl_resolve_url), (totem_pl_parser_add_pls_with_contents),
	(parse_asx_entry), (parse_smil_video_entry), (parse_xspf_track),
	(parse_xspf_trackList), (parse_xspf_entries),
	(totem_pl_parser_add_xspf):
	* src/plparse/totem-pl-parser.h:
	* src/totem-playlist.c: (totem_playlist_save_current_playlist),
	(totem_playlist_save_current_playlist_ext),
	(totem_playlist_save_playlist),
	(totem_playlist_save_add_format_combo_box),
	(totem_playlist_save_files):
	* src/totem-playlist.h:
	Patch from Przemysław Grzegorczyk <pgrzegorczyk@gmail.com> to add XSPF
	save and load support to TotemPlaylistParser, and add a way to choose
	the playlist type when saving them.
	Also fixes using the wrong buffer when writing an m3u playlist,
	and adding the wrong URI when using relative URIs in PLS playlists.

2006-05-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require intltool 0.35.0

============ Version 1.5.0

2006-05-14  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.5.0

2006-05-14  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_handle_element_message):
	* src/backend/video-utils.c: (totem_resolve_relative_link):
	* src/totem-mozilla-viewer.c: (on_got_redirect):
	* src/totem.c: (on_got_redirect):
	Patch from Tim-Philipp Müller <tim at centricular dot net> to handle
	relative links in the front-end, as it knows the canonical mrl for the
	stream, and the backend doesn't, fixes Apple trailers playback in the